src/objects/Object_Rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Object rule settings for E2S</description>
    <fields>
        <fullName>Default_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this rule should be used for emails sent from an unknown source</description>
        <inlineHelpText>Check if you would like to use this rule for any emails sent from an unknown source</inlineHelpText>
        <label>Default Rule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Email_Address__c</fullName>
        <description>The email address(es) that will be notified in the event of an error in the email to Salesforce conversion</description>
        <inlineHelpText>Enter the email address(es) that should be notified if an error occurs during the email to Salesforce conversion-separate multiple addresses with a semicolon</inlineHelpText>
        <label>Error Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Forwarding_Email_Address__c</fullName>
        <description>The email address(es) that the original email will be forwarded to upon conversion to Salesforce</description>
        <inlineHelpText>Enter the email address(es) that the original email should be forwarded to upon conversion to Salesforce conversion-separate multiple addresses with a semicolon and leave blank if not required</inlineHelpText>
        <label>Forwarding Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_3rd_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if 3rd party should be notified upon email to Salesforce conversion</description>
        <inlineHelpText>Check if you would like to notify the 3rd party that a Salesforce record has been created on their behalf-to use this feature you MUST enter a value in the 3rd Party Email Field setting</inlineHelpText>
        <label>Notify 3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Record_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the record owner should be notified upon email to Salesforce conversion</description>
        <inlineHelpText>Check if you would like to notify the record owner after the email to Salesforce conversion</inlineHelpText>
        <label>Notify Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <description>API name of th rule&apos;s corrresponding object</description>
        <inlineHelpText>Enter the API name of the object for which this rule is being created</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Email_Address__c</fullName>
        <description>Sender address of incoming emails</description>
        <inlineHelpText>Enter the sender address of incoming emails</inlineHelpText>
        <label>Sender Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X3rd_Party_Email_Field__c</fullName>
        <description>API name of the Salesforce field that will store the 3rd party email address(es) upon email to Salesforce conversion</description>
        <inlineHelpText>Enter the API name of the Salesforce field that will store the 3rd party email address(es) after the email to Salesforce conversion-if the field stores multiple addresses they should be separated by a semicolon</inlineHelpText>
        <label>3rd Party Email Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>E2S - Object Rules</label>
</CustomObject>